web-infras/parser/tests/fixtures/self-added/await-in-async-context/await-as-arrow-param-lhs-pat/strict-mode-parent-async-current-not/output.txt
[SyntaxError]: Can not use 'await' as identifier inside an async function. (3,7)
3|    ({await}) => {
 |     ^
[SyntaxError]: Can not use 'await' as identifier inside an async function. (3,7)
3|    ({await}) => {
 |     ^
